tests/syntax_errors/sasha46_2.tl
-- test case 46.
-- Description : Syntax. wrong prolog string

-- Expected : '2'
require "love"

